# comms

./: README.md  comms.opam  dune-project
_build/: .db  .digest-db  log
_build/default/: comms.dune-package  comms.install
_build/default/.ppx/a76fba754b08f1cb0a399db3859acbd2/: dune__exe___ppx.cmo
_build/default/.ppx/bfcab61e6a21ecf6d2f80029fc1ef484/: dune__exe___ppx.cmo
_build/default/lib/: comms.cma  comms.cmxa  comms.cmxs
_build/default/lib/.comms.objs/byte/: comms.cmi  comms.cmo  comms.cmt
_build/default/lib/.comms.objs/native/: comms.cmx
_build/default/lib/.formatted/: dune
_build/default/lib/.merlin-conf/: lib-comms
_build/default/server/: server.cma  server.cmxa  server.cmxs  server__.ml-gen
_build/default/server/.formatted/: dune  server.ml
_build/default/server/.merlin-conf/: lib-server
_build/default/server/.server.objs/: server.impl.all-deps  server.impl.d  server__Order.impl.d  server__Order.intf.d
_build/default/server/.server.objs/byte/: server.cmi  server.cmo  server.cmt  server__.cmi  server__.cmo  server__.cmt  server__Order.cmi  server__Order.cmo  (+2 more)
_build/default/test/: dune  test_comms.cma  test_comms.cmxa  test_comms.cmxs  test_comms.pp.ml
_build/default/test/.merlin-conf/: lib-test_comms
_build/default/test/.test_comms.inline-tests/: partitions-best
server/: order.ml  server.ml
test/: test_comms.ml
udp_client/: dune-project
udp_client/_build/: log
udp_client/lib/: dune
udp_client/test/: dune
udp_server/: dune-project
udp_server/lib/: dune
udp_server/server/: order.mli  order.proto
udp_server/test/: dune
(+14 files in other folders)
