(lang dune 3.16)

(name comms)

(generate_opam_files true)

(source
 (github harrisbisset/ocamlcomm))

(authors "Harris Bisset")

(maintainers "Harris Bisset")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name comms)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
